--- a/WebPCConfigTool/Web.config
+++ b/WebPCConfigTool/Web.config
@@ -9,10 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+    <add name="DatabaseModelContext" providerName="System.Data.SqlClient" 
+         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=PCConfigTool;AttachDbFilename=|DataDirectory|\PCConfigTool.mdf;Integrated Security=SSPI" />
     <!--
-    <add name="DatabaseModelContext" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=PCConfigurationTool;AttachDbFilename=|DataDirectory|\PCConfigurationTool.mdf;Integrated Security=SSPI" />
-    -->
      <add name="DatabaseModelContext" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQL2016;Initial Catalog=PCConfigTool;Integrated Security=True;MultipleActiveResultSets=True" />
+     -->
  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
